# rush-booking

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.sqlx/: query-843d8c4fa2686b9309df82d75c4fe1853378e7c0994a7b104c37a3ebeaf443bf.json
benches/: my_benchmark.rs
configuration/: base.yaml
docs/: rush booking.postman_collection.json
migrations/: 20240702040859_create_hosts_table.sql  20240713072259_create_rooms_table.sql  20240713123136_add_columns_in_hosts_table.sql  20240729153144_seed_admin_user.sql
scripts/: init_db.sh
sonarqube-local/: README.md  docker-compose.yml  sonar-project.properties.example
src/: authentication.rs  configuration.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  routes.rs  services.rs  startup.rs  utils.rs
src/authentication/: decode.rs  domain.rs  error.rs  password.rs  sign.rs  verify.rs
src/domain/: booking.rs  customer.rs  repository.rs  sealed_trait.rs  service.rs  state.rs
src/infrastructure/: room_repository_impl.rs
src/routes/: admin.rs  login.rs
src/routes/admin/: room.rs
src/routes/admin/host/: get.rs  list.rs  post.rs
src/routes/admin/room/: list.rs  post.rs
src/routes/admin/user/: list.rs  post.rs
src/services/: create_booking.rs
tests/api/: helpers.rs  jwt.rs  login.rs  main.rs  manage_host.rs  manage_room.rs  playground.rs
